--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
           />
         </div>
         <div class="form-control">
-          <button type="submit" class="btn">
-            <i class="fa-solid fa-plus"></i> Add Item
-          </button>
+          <div id="buttons-section">
+            <button type="submit" class="btn">
+              <i class="fa-solid fa-plus"></i> Add Item
+            </button>
+          </div>
         </div>
       </form>
 
